# dylin-sample

./: Dockerfile  README.md
app/: run.sh
app/mypackage/: pyproject.toml
app/mypackage/tests/: test_inconsistent_preprocessing.py
