[project]
name = "mypackage"
version = "0.1.0"
description = "A test package for DyLin analysis"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=2.1.3",
    "scikit-learn>=1.6.1",
    "pytest>=8.3.5",
    "pytest"
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"